--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "ResumeGenerator-ReactFrontend",
+  "name": "exjobb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "classnames": "^2.2.6",
     "jar": "^0.3.4",
     "jarfile": "^2.0.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
