--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "router": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
