--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "jar": "^0.3.4",
     "jarfile": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "router": "^1.3.3"
   },
   "scripts": {
