--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "router": "^1.3.3"
+    "router": "^1.3.3",
+    "lodash": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
