--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jar": "^0.3.4",
     "jarfile": "^2.0.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -20,11 +21,15 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "router": "^1.3.3",
-    "lodash": "latest"
+    "yarn": "^1.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "REACT_APP_ENV=development yarn start",
+    "prod": "REACT_APP_ENV=production yarn start",
     "build": "react-scripts build",
+    "build:dev": "REACT_APP_ENV=development yarn build",
+    "build:prod": "REACT_APP_ENV=production yarn build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
