prod and dev for windows cmd

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "cross-env": "^5.2.0",
     "jar": "^0.3.4",
     "jarfile": "^2.0.0",
     "jwt-decode": "^2.2.0",
     "lodash": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-app-env": "^1.2.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -25,8 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "REACT_APP_ENV=development yarn start",
-    "prod": "REACT_APP_ENV=production yarn start",
+    "dev": "cross-env REACT_APP_ENV=development yarn start",
+    "prod": "cross-env REACT_APP_ENV=production yarn start",
     "build": "react-scripts build",
     "build:dev": "REACT_APP_ENV=development yarn build",
     "build:prod": "REACT_APP_ENV=production yarn build",
