--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "latest",
     "prop-types": "^15.7.2",
+    "query-string": "^6.5.0",
     "react": "^16.8.4",
     "react-app-env": "^1.2.3",
     "react-bootstrap": "^1.0.0-beta.5",
