--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lodash": "latest",
     "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-app-env": "^1.2.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
@@ -21,6 +21,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redocx": "^1.1.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "router": "^1.3.3",
@@ -44,5 +45,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
+  }
 }
